<resources>
    <string name="app_name">Sales manager</string>

    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>

    <string name="item_home">Customers</string>
    <string name="item_sales">Sales</string>
    <string name="item_graphics">Graphics</string>
    <string name="item_configuration">Configuration</string>

    <string name="titulo_comidas_populares">Lo más pedido</string>

    <string name="titulo_tab_platillos">PLATILLOS</string>
    <string name="titulo_tab_bebidas">BEBIDAS</string>
    <string name="titulo_tab_postres">POSTRES</string>

    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_direcciones">DIRECCIONES</string>
    <string name="titulo_tab_tarjetas">TARJETAS</string>

    <string name="texto_no_tarjetas">No tienes ninguna tarjeta asociada</string>

    <string name="etiqueta_carrito">Carrito</string>

    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_info_usuario">Información del usuario</string>
    <string name="total">$ 0</string>
    <string name="shop">shop</string>
    <string name="logo">Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="direcci_n">Dirección</string>
    <string name="departamento">Departamento</string>
    <string name="ciudad">Ciudad</string>
    <string name="tel_fono">Teléfono</string>
    <string name="img">img adelante</string>

</resources>
