<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/espacio_norma_1"
    android:id="@+id/order_row_lower_layout"
    android:layout_below="@+id/order_row_upper_layout"
    android:layout_toEndOf="@+id/order_row_box_layout"
    android:layout_toRightOf="@+id/order_row_box_layout"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toLeftOf="@+id/icono_indicador_derecho"
        android:layout_toStartOf="@+id/icono_indicador_derecho">

        <TextView
            android:id="@+id/texto_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direcci_n"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texto_departamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departamento"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/texto_ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/texto_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_fono"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ImageView
        android:id="@+id/icono_indicador_derecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_indicador_derecho" android:contentDescription="@string/img" />
</RelativeLayout>